--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,34 @@
 micronaut:
   application:
     name: myChatGPT
+  views:
+    thymeleaf:
+      enabled: true
+      prefix: "/views/"
+      suffix: .html
 datasources:
   default:
     driver-class-name: com.mysql.cj.jdbc.Driver
     db-type: mysql
     dialect: MYSQL
+    url: "jdbc:mysql://localhost:3306/mydatabase"
+    username: "root"
+    password: "123456"
 liquibase:
+  enabled: false
   datasources:
     default:
       change-log: classpath:db/liquibase-changelog.xml
 jpa:
   default:
+    entities:
+      packages:
+        - com.example.beans
     properties:
       hibernate:
         hbm2ddl:
-          auto: none
+          auto: update
 netty:
   default:
     allocator:
-      max-order: 3
+      max-order: 5
